--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-description: "Thinking will not overcome fear but action will."
+description: "再看我 再看我 再看我就把你吃掉."
 ---
 
 {% for post in paginator.posts %}
