--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 layout: page
 title: "About"
 description: "Hey, this is ZYC."
-header-img: "img/xy.jpg"
+header-img: "img/post-bg-swift2.jpg"
 ---
 
 <!-- Language Selector -->
