--- a/about.html
+++ b/about.html
@@ -16,7 +16,7 @@ header-img: "img/post-bg-swift2.jpg"
 
     <!--copied from markdown -->
     <blockquote><p>我就是我<br>
-    积不一样的烟火</p></blockquote>
+    不一样的烟火</p></blockquote>
 
     <p>Hey，我是。。。。。</p>
 
